--- a/css/style.css
+++ b/css/style.css
@@ -9471,6 +9471,10 @@ a.text-dark:hover, a.text-dark:focus {
   height: 50px;
 }
 
+.width-100 {
+  width: 100%;
+}
+
 .btn-square,
 .btn-sm-square,
 .btn-lg-square {
